/*
 * $Id: ChangeLog,v 1.835 2003/03/14 11:21:23 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-14 14:10 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
  * source/vm/thread.c
  * source/vm/garbage.c
    ! Compilation with fence under windows is fixed (still have to implement
      it though), and added some optimizations for linux. 

2003-03-14 12:20 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
  * source/vm/thread.c
    + Added support for fenced idle routines under Linux.
    + Added PRG function ThreadIdleFence( [bMode] )--> bOldMode that
      queries or sets the idle fence.

  * source/vm/garbage.c
    * Now GC can be in fenced or unfenced mode under linux.

  * source/vm/hvm.c
    * The maximum count of instructions after wich the VM tests for cancelation
      is now defined in thread.h (HB_VM_UNLOCK_PERIOD).

  * source/rtl/console.c
    ! Fixed a bug in secure console locking.

  * tests/Makefile
    ! harbour is now searched in $HB_BIN_INSTALL

  * tests/mtgc.prg
    + Added a test for unfenced garbage collecting.

2003-03-13 16:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
  * include/hbexprop.h
  * include/hbpcode.h
  * source/compiler/exproptb.c
  * source/compiler/genc.c
  * source/compiler/harbour.sly
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
  * source/vm/hvm.c
    + Added support for new HB_P_PUSHMACROREF

  /*
     Syntax @&<macro> and @&<macro>.<suffix> is now suported
     as argument to function calls.
   */

  + tests/macroref.prg
    + Added test of passing macro by reference.

2003-03-13 03:58 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * thread.h
    ! fixed linux compilation

2003-03-13 03:50 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * thread.h
  * thread.c